<resources>
    <string name="app_name">SemSemGallery</string>

    <!-- ==================================================== -->
    <!-- ==                                                == -->
    <!-- == THIẾU GÌ THÌ CỨ BỔ SUNG VÀO TRONG LÚC CODE     == -->
    <!-- == VÌ APP RẤT LỚN, KO THỂ LIỆT KÊ HẾT 1 LẦN ĐC    == -->
    <!-- == CỨ THÊM THEO SYNTAX :                          == -->
    <!-- == <string name="snake_case">Snake case</string>  == -->
    <!-- ==                                                == -->
    <!-- ==================================================== -->

    <!-- Navigation Bar -->
    <string name="pictures">Pictures</string>
    <string name="albums">Albums</string>
    <string name="favorites">Favorites</string>
    <string name="album">Album</string>
    <string name="favorite">Favorite</string>
    <string name="information">Information</string>

    <!-- Common texts (Alphabet Sort) -->
    <string name="cancel">Cancel</string>
    <string name="camera">Camera</string>
    <string name="copy">Copy</string>

    <string name="date">Date</string>
    <string name="delete">Delete</string>
    <string name="details">Details</string>

    <string name="edit">Edit</string>

    <string name="images">Images</string>
    <string name="images_low">images</string>
    <string name="image">Image</string>

    <string name="locations">Locations</string>

    <string name="move">Move</string>
    <string name="my_albums">My albums</string>

    <string name="name">Name</string>
    <string name="no">No</string>

    <string name="ok">Ok</string>

    <string name="properties">Properties</string>

    <string name="recent">Recent</string>
    <string name="rename">Rename</string>

    <string name="search">Search</string>
    <string name="select_all">Select all</string>
    <string name="unselect_all">Unselect all</string>
    <string name="settings">Settings</string>
    <string name="share">Share</string>
    <string name="size">Size</string>
    <string name="save">Save</string>

    <string name="trash">Trash</string>
    <string name="type">Type</string>

    <string name="video">Video</string>
    <string name="videos">Videos</string>

    <string name="yes">Yes</string>
    <string name="backup_setting">Backup setting</string>

    <!-- Top app bar -->
    <string name="cloud_sync">Sync with cloud</string>
    <string name="more">More</string>
    <string name="add">Add</string>
    <string name="hide_albums">Hide albums</string>

    <!--  Setting screen  -->
    <string name="sync_title">Sync with OneDrive </string>
    <string name="sync_description">Sync your pictures and videos with the SemSem Gallery folder in OneDrive.</string>
    <string name="sync_switch_status_off">Auto sync turn off</string>
    <string name="theme_options">Theme options</string>
    <string name="dark_mode">Dark mode</string>
    <string name="auto_play">Auto play motion photos</string>
    <string name="merge_album">Merge albums</string>
    <string name="merge_album_description">Albums with the same name will be shown as a single album.</string>


    <!--  Edit Meta Data screen  -->
    <string name="datetime_default">Default</string>
    <string name="image_name_default">This is name</string>
    <string name="location_default">No location information</string>
    <string name="picture_format_default">jpg</string>


    <!--  View Meta Data fragment  -->
    <string name="x">x</string>
    <string name="add_tag"># Add tag</string>

    <!--  OCR fragment  -->
    <string name="all_text">All Text</string>

    <!--  MAP fragment  -->
    <string name="done">Done</string>


    <!--    Recently deleted screen-->
    <string name="trash_description">This feature can get the pictures which is trashed by this app only. Please use the default gallery for access all trash pictures.</string>
    <string name="empty">Empty</string>
    <string name="select_items">Select items</string>
    <string name="all">All</string>
    <string name="selected">selected</string>
    <string name="restore">Restore</string>


    <!--    DateTimePicker -->
    <string name="switch_datetime_picker_name">Switch DateTime Picker</string>
    <string name="open_datetime_dialog">Open DateTime Dialog</string>
    <string name="open_datetime_dialog_with_neutral_button">Open DateTime Dialog with Neutral Button</string>
    <string name="clean">Clean</string>
    <string name="back">Back</string>
    <string name="copy_to_clipboard">Copy to clipboard</string>
    <string name="copy_to_album">Copy to album</string>
    <string name="move_to_album">Move to album</string>
    <string name="set_as_wallpaper">Set as wallpaper</string>
    <string name="print">Print</string>
    <string name="lock_and_home_screens">Lock and Home screens</string>
    <string name="home_screen">Home screen</string>
    <string name="lock_screen">Lock screen</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <string name="cloud_feature">This feature can get the pictures uploaded by this app only.</string>
    <string name="client_id">764863812102-2ra6ljef2bq889f5hmdojipk6te2uggp.apps.googleusercontent.com</string>
    <string name="tags">Tags</string>
    <string name="create_new_tag">Create new tag</string>
    <string name="gallery">Gallery</string>
    <string name="bitmap">Bitmap</string>
    <string name="prose_hint">Type something here to include in the report</string>
    <string name="web_page">Web Page</string>
    <string name="tps_report">TPS Report</string>
    <string name="report_body"><![CDATA[
        <html>
        <body>
        <h1>TPS Report for: {{reportDate}}</h1>
        <p>Here are the contents of this week\'s TPS report:</p>
        <p>{{message}}</p>
        <p>If you have any questions regarding this report, please
        do <b>not</b> ask Mark Murphy.</p>
        </body>
        </html>
        ]]>
	</string>
    <string name="pdf">PDF</string>
    <string name="sort">Sort</string>
    <string name="date_added_ascending">Date added (ascending)</string>
    <string name="date_added_descending">Date added (descending)</string>
    <string name="name_a_to_z">Name (A to Z)</string>
    <string name="name_z_to_a">Name (Z to A)</string>
</resources>