<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/add"
        android:title="@string/add"
        android:icon="@drawable/ic_add"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/search"
        android:title="@string/search"
        android:icon="@drawable/ic_search"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/edit"
        android:title="@string/edit"
        app:showAsAction="never" />

    <item
        android:id="@+id/select_all"
        android:title="@string/select_all"
        app:showAsAction="never" />

    <item
        android:id="@+id/hide_album"
        android:title="@string/hide_albums"
        app:showAsAction="never" />
</menu>