<?xml version="1.0" encoding="utf-8"?>
<RadioGroup android:id="@+id/sort_radio_group"
    android:layout_width="wrap_content"
    android:layout_margin="12dp"
    android:padding="12dp"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <RadioButton
        android:id="@+id/added_asc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date_added_ascending"/>
    <RadioButton
        android:id="@+id/added_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date_added_descending"/>
    <RadioButton
        android:id="@+id/name_asc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name_a_to_z"/>
    <RadioButton
        android:id="@+id/name_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name_z_to_a"/>
</RadioGroup>