<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:id="@+id/picture_option_botsheet"
    app:behavior_hideable="true"
    android:layout_height="wrap_content"
    app:layout_behavior="android.support.design.widget.BottomSheetBehavior"
    android:paddingTop="28dp"
    android:paddingLeft="25dp"
    android:paddingRight="25dp"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_marginBottom="19dp"
        android:text="@string/set_as_wallpaper"
        android:layout_height="wrap_content" />


        <TextView
            android:padding="15dp"
            android:background="@drawable/component_border"
            android:layout_width="match_parent"
            android:id="@+id/lock_screen"
            android:textSize="18sp"
            android:text="@string/lock_screen"
            android:layout_marginBottom="15dp"
            android:layout_height="wrap_content" />

    <TextView
        android:padding="15dp"
        android:background="@drawable/component_border"
        android:layout_width="match_parent"
        android:text="@string/home_screen"
        android:id="@+id/home_screen"
        android:textSize="18sp"
        android:layout_marginBottom="15dp"
        android:layout_height="wrap_content" />


    <TextView
        android:padding="15dp"
        android:background="@drawable/component_border"
        android:layout_width="match_parent"
        android:layout_marginBottom="30dp"
        android:textSize="18sp"
        android:id="@+id/lock_and_home_screens"
        android:text="@string/lock_and_home_screens"
        android:layout_height="wrap_content" />

</LinearLayout>
