<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Your content here -->
    <com.google.android.material.appbar.MaterialToolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        android:id="@+id/selecting_top_bar"
        app:title="@string/select_items" />

    <RelativeLayout
        android:layout_above="@+id/action_bar"
        android:id="@+id/contentGroup"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/picture_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </RelativeLayout>


    <LinearLayout
        android:id="@id/action_bar"
        android:visibility="gone"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="4">
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="?attr/materialIconButtonStyle"
            android:textColor="@color/text_color_black"
            android:layout_weight="1"
            android:text="@string/share"
            android:id="@+id/btnShare"
            android:drawableTop="@drawable/ic_share" />
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="?attr/materialIconButtonStyle"
            android:textColor="@color/text_color_black"
            android:layout_weight="1"
            android:id="@+id/btnAddTag"
            android:text="@string/add_tag"
            android:drawableTop="@drawable/ic_hash_tag" />
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="?attr/materialIconButtonStyle"
            android:textColor="@color/text_color_black"
            android:layout_weight="1"
            android:id="@+id/btnDelete"
            android:text="@string/delete"
            android:drawableTop="@drawable/ic_delete" />
        <Button
            android:layout_width="0dp"
            android:id="@+id/btnMore"
            android:layout_height="wrap_content"
            style="?attr/materialIconButtonStyle"
            android:layout_weight="1"
            android:text="@string/more"
            android:textColor="@color/text_color_black"
            android:drawableTop="@drawable/ic_menu" />
    </LinearLayout>
</RelativeLayout>
