<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <TextView
            android:layout_width="wrap_content"
            android:text="@string/tags"
            android:layout_margin="20dp"
            android:textStyle="bold"
            android:layout_alignParentStart="true"
            android:gravity="center"
            android:textSize="16sp"
            android:layout_marginStart="24dp"
            android:id="@+id/tags"
            android:layout_height="wrap_content"/>

        <Button
            style="@style/Widget.Material3.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_marginTop="8dp"
            android:id="@+id/save_tags"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="-1dp"
            android:gravity="center_horizontal"
            android:text="@string/save"
            android:textSize="16sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:id="@+id/tags_recycler_view"
            android:layoutDirection="ltr"
            android:layout_marginStart="16dp"
            android:layout_height="wrap_content"/>
        <ProgressBar
            android:layout_width="wrap_content"
            android:id="@+id/progressBar"
            android:layout_centerInParent="true"
            android:layout_height="wrap_content"/>
    </RelativeLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:textColor="@color/text_color_black"
            android:maxWidth="300dp"
            android:textSize="16sp"
            android:hint="@string/create_new_tag"
            android:textStyle="bold"
            android:drawableTint="@color/track_on"
            android:id="@+id/create_tag"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:drawableStart="@drawable/ic_hash_tag"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:maxLength="50"
            android:layout_margin="15dp"
            android:foregroundTint="@color/track_on"
            android:gravity="center_vertical"
            android:clickable="true"/>

        <ImageButton
            android:id="@+id/add_tag_btn"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:enabled="false"
            android:visibility="invisible"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="24dp"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_add_circle"
            android:contentDescription="@string/app_name" />
    </LinearLayout>


</LinearLayout>