<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/edit_data_topAppBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:menu="@menu/top_bar_pictures"
        android:minHeight="?attr/actionBarSize" />

    <LinearLayout
        android:id="@+id/datetime_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_calendar"/>


        <TextView
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textStyle="bold"
            android:id="@+id/datetime_TextView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="15dp"
            android:gravity="center_vertical"
            android:text="@string/datetime_default"
            android:clickable="true"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/image_name_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginTop="30dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:src="@drawable/ic_images_mode"/>


        <EditText
            android:maxWidth="300dp"
            android:textSize="15sp"
            android:textStyle="bold"
            android:id="@+id/image_name_TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:gravity="center_vertical"
            android:hint="@string/image_name_default"
            android:textColorHint="@color/black"
            android:clickable="true"/>

        <TextView
            android:textSize="15sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:id="@+id/image_format"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/picture_format_default" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/location_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginTop="30dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_gravity="center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/ic_location"/>


        <TextView
            android:textColor="@color/black"
            android:maxWidth="300dp"
            android:textSize="15sp"
            android:textStyle="bold"
            android:id="@+id/location_TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:gravity="center_vertical"
            android:text="@string/location_default"
            android:clickable="true"/>


        <ImageButton
            android:id="@+id/add_location_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="6dp"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_add_circle" />

        <ImageButton
            android:id="@+id/remove_location_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="6dp"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_remove_circle"
            android:visibility="gone"/>
    </LinearLayout>

    <LinearLayout
        android:gravity="center_horizontal"
        android:id="@+id/save_cancel_button_container"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="bottom">

        <Button
            android:id="@+id/edit_cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:background="@android:color/transparent"
            android:text="@string/cancel"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@android:color/black"/>

        <Button
            android:id="@+id/edit_test_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:background="@android:color/transparent"
            android:text="@string/save"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_marginStart="110dp"
            android:textColor="@android:color/black"/>

    </LinearLayout>




</LinearLayout>